syntax = "proto3";

option go_package = "github.com/luizpbraga/common/api";

package api;

message Item {
  string ID = 1;
  string Name = 2;
  string PriceID = 3;
  int32 Quantity = 4;
}

message ItemsWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string custumerID = 1;
  repeated ItemsWithQuantity Item = 2;
}

message Order {
  string ID = 1;
  string custumerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}
